@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepositoryBD <<interface>>

title Class Diagram / As Marketing director, I want to define a new Plan



class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
}
class PlansViewMapper{
    +toPlansView(Plans plans):PlansView
}
class PlansController{
    create(final CreatePlanRequest resource):ResponseEntity<PlansView>
    }
class PlansService{
 +create(createPlansMapper resource):Plans

}
class CreatePlansMapper{
    +create(CreatePlanRequest request):Plans
}

interface PlansRepositoryBD
{
+findByName_Name(String name): Optional<Plans>
+save(S entity) : <S extends Plans>
}


PlansController ..> PlansService: uses >
PlansService ..> PlansRepositoryBD: uses >
PlansRepositoryBD ..> Plans: < record
PlansService ..> CreatePlansMapper: uses >
PlansController ..>PlansViewMapper: uses >
@enduml
